Signed-off-by: sebint <sebin@hummingsoft.com.my>

--- a/assets/templates/overall_progress.html
+++ b/assets/templates/overall_progress.html
@@ -75,6 +75,7 @@
             <td colspan="7" style="text-align: center; height: 120px; vertical-align: middle">No data to display</td>
         <%}%>
         </tbody>
+    </table>
     <!--<div style="text-align: right; margin-top: 15px;"> <i class="fa fa-circle" style="color:#2acd4a"></i><span style="color: #efefef">&nbsp;Completed&nbsp;&nbsp;</span>-->
         <!--<i class="fa fa-circle" style="color:#efe24b"></i><span style="color: #efefef">&nbsp;In Progress&nbsp;&nbsp;</span>-->
         <!--<i class="fa fa-circle" style="color:#E83737"></i><span style="color: #efefef">&nbsp;Pending&nbsp;&nbsp;</span>-->
