Signed-off-by: sebint <sebin@hummingsoft.com.my>

--- a/assets/templates/stcs_map.html
+++ b/assets/templates/stcs_map.html
@@ -12,7 +12,7 @@
         color: white;
         cursor: pointer;
         display: table;
-        height: 320px;
+        height: 328px;
         left: 0;
         position: absolute;
         top: 0;
@@ -42,7 +42,7 @@
     <div class="col-md-12" style="padding-left: 0px; padding-right: 0px;">
         <a href="map">
             <div  class="wrapper_img" style="border: 3px solid #000; border-radius: 4px; background-color: rgba(16, 19, 32, 0.72);">
-                <img src="../assets/img/systems/stcs/map_md.png" alt="Signaling & Train Control System" width="100%">
+                <img src="../assets/img/systems/stcs/demo_map.jpg" alt="Signaling & Train Control System" width="100%">
                 <span class="text-content"><span><i class="fa fa-search"></i> Click to view</span></span>
             </div>
         </a>
