Signed-off-by: ancymathew <ancy@hummingsoft.com.my>

--- a/assets/templates/trainborne_overall_et.html
+++ b/assets/templates/trainborne_overall_et.html
@@ -56,7 +56,7 @@
             <i class="fa fa-square" style="color:#f9f55c"></i><span style="color: #efefef">&nbsp;In Progress&nbsp;&nbsp;</span>
             <i class="fa fa-square" style="color:#FF360E"></i><span style="color: #efefef">&nbsp;Not Completed&nbsp;&nbsp;</span>
         </div>
-        <div class="row">
+        <div class="row" style="display: none">
             <table align="center" class="table table-bordered " style="background-color:transparent;width: 15% ">
                 <thead>
                 <tr>
@@ -103,86 +103,86 @@
 
             <div class="col-2 menu">
                 <ul>
-                    <li style="background-color: #C0C0C0"><a href="#">1</a></li>
-                    <li style="background-color: #C0C0C0"><a href="#">8</a></li>
-                    <li style="background-color: #FF360E"><a href="#">15</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">22</a></li>
-                    <li style="background-color: #f9f55c"><a href="#">29</a></li>
-                    <li style="background-color: #f9f55c"><a href="#">36</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">43</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">50</a></li>
+                    <a href="#"> <li style="background-color: #C0C0C0">1</li></a>
+                    <a href="#"> <li style="background-color: #C0C0C0">8</li></a>
+                    <a href="#"> <li style="background-color: #FF360E">15</li></a>
+                    <a href="#"> <li style="background-color: #6BDD5A">22</li></a>
+                    <a href="#"><li style="background-color: #f9f55c">29</li></a>
+                    <a href="#"><li style="background-color: #f9f55c">36</li></a>
+                    <a href="#"><li style="background-color: #6BDD5A">43</li></a>
+                    <a href="#"><li style="background-color: #6BDD5A">50</li></a>
                 </ul>
             </div>
             <div class="col-2 menu">
                 <ul>
-                    <li style="background-color: #C0C0C0"><a href="#">2</a></li>
-                    <li style="background-color: #C0C0C0"><a href="#">9</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">16</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">23</a></li>
-                    <li style="background-color: #f9f55c"><a href="#">30</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">37</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">44</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">51</a></li>
+                    <a href="#"><li style="background-color: #C0C0C0">2</li></a>
+                    <a href="#"> <li style="background-color: #C0C0C0">9</li></a>
+                    <a href="#"><li style="background-color: #6BDD5A">16</li></a>
+                    <a href="#"><li style="background-color: #6BDD5A">23</li></a>
+                    <a href="#"><li style="background-color: #f9f55c">30</li></a>
+                    <a href="#"><li style="background-color: #6BDD5A">37</li></a>
+                    <a href="#"><li style="background-color: #6BDD5A">44</li></a>
+                    <a href="#"><li style="background-color: #6BDD5A">51</li></a>
                 </ul>
             </div>
             <div class="col-2 menu">
                 <ul>
-                    <li style="background-color: #C0C0C0"><a href="#">3</a></li>
-                    <li style="background-color: #C0C0C0"><a href="#">10</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">17</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">24</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">31</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">38</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">45</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">52</a></li>
+                    <a href="#"> <li style="background-color: #C0C0C0">3</li></a>
+                    <a href="#"><li style="background-color: #C0C0C0">10</li></a>
+                    <a href="#"><li style="background-color: #6BDD5A">17</li></a>
+                    <a href="#"><li style="background-color: #6BDD5A">24</li></a>
+                    <a href="#"><li style="background-color: #6BDD5A">31</li></a>
+                    <a href="#"> <li style="background-color: #6BDD5A">38</li></a>
+                    <a href="#"> <li style="background-color: #6BDD5A">45</li></a>
+                    <a href="#"> <li style="background-color: #6BDD5A">52</li></a>
                 </ul>
             </div>
             <div class="col-2 menu">
                 <ul>
-                    <li style="background-color: #C0C0C0"><a href="#">4</a></li>
-                    <li style="background-color: #C0C0C0"><a href="#">11</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">18</a></li>
-                    <li style="background-color: #f9f55c"><a href="#">25</a></li>
-                    <li style="background-color: #f9f55c"><a href="#">32</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">39</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">46</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">53</a></li>
+                    <a href="#"> <li style="background-color: #C0C0C0">4</li></a>
+                    <a href="#"> <li style="background-color: #C0C0C0">11</li></a>
+                    <a href="#"> <li style="background-color: #6BDD5A">18</li></a>
+                    <a href="#"><li style="background-color: #f9f55c">25</li></a>
+                    <a href="#"> <li style="background-color: #f9f55c">32</li></a>
+                    <a href="#"><li style="background-color: #6BDD5A">39</li></a>
+                    <a href="#"> <li style="background-color: #6BDD5A">46</li></a>
+                    <a href="#"><li style="background-color: #6BDD5A">53</li></a>
                 </ul>
             </div>
             <div class="col-2 menu">
                 <ul>
-                    <li style="background-color: #C0C0C0"><a href="#">5</a></li>
-                    <li style="background-color: #C0C0C0"><a href="#">12</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">19</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">26</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">33</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">40</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">47</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">54</a></li>
+                    <a href="#"><li style="background-color: #C0C0C0">5</li></a>
+                    <a href="#"><li style="background-color: #C0C0C0">12</li></a>
+                    <a href="#"> <li style="background-color: #6BDD5A">19</li></a>
+                    <a href="#"> <li style="background-color: #6BDD5A">26</li></a>
+                    <a href="#"> <li style="background-color: #6BDD5A">33</li></a>
+                    <a href="#"><li style="background-color: #6BDD5A">40</li></a>
+                    <a href="#"> <li style="background-color: #6BDD5A">47</li></a>
+                    <a href="#"> <li style="background-color: #6BDD5A">54</li></a>
                 </ul>
             </div>
             <div class="col-2 menu">
                 <ul>
-                    <li style="background-color: #C0C0C0"><a href="#">6</a></li>
-                    <li style="background-color: #C0C0C0"><a href="#">13</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">20</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">27</a></li>
-                    <li style="background-color: #f9f55c"><a href="#">34</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">41</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">48</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">55</a></li>
+                    <a href="#"> <li style="background-color: #C0C0C0">6</li></a>
+                    <a href="#"> <li style="background-color: #C0C0C0">1</li></a>
+                    <a href="#"> <li style="background-color: #6BDD5A">20</li></a>
+                    <a href="#"> <li style="background-color: #6BDD5A">2</li></a>
+                    <a href="#"> <li style="background-color: #f9f55c">34</li></a>
+                    <a href="#"> <li style="background-color: #6BDD5A">41</li></a>
+                    <a href="#"><li style="background-color: #6BDD5A">48</li></a>
+                    <a href="#"> <li style="background-color: #6BDD5A">55</li></a>
                 </ul>
             </div>
             <div class="col-2 menu">
                 <ul>
-                    <li style="background-color: #C0C0C0"><a href="#">7</a></li>
-                    <li style="background-color: #FF360E"><a href="#">14</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">21</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">28</a></li>
-                    <li style="background-color :#f9f55c"><a href="#">35</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">42</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">49</a></li>
-                    <li style="background-color: #6BDD5A"><a href="#">56</a></li>
+                    <a href="#">  <li style="background-color: #C0C0C0">7</li></a>
+                    <a href="#"><li style="background-color: #FF360E">14</li></a>
+                    <a href="#"> <li style="background-color: #6BDD5A">21</li></a>
+                    <a href="#"><li style="background-color: #6BDD5A">28</li></a>
+                    <a href="#"><li style="background-color :#f9f55c">35</li></a>
+                    <a href="#"><li style="background-color: #6BDD5A">42</li></a>
+                    <a href="#"> <li style="background-color: #6BDD5A">49</li></a>
+                    <a href="#"><li style="background-color: #6BDD5A">56</li></a>
                 </ul>
             </div>
 </div>
