--- a/assets/plugin/drop-popup/main.css
+++ b/assets/plugin/drop-popup/main.css
@@ -13,7 +13,10 @@
   display: inline-block;
   /*vertical-align: middle;*/
 }
-
+.fimd-dropdown {
+    display: inline-block;
+    /*vertical-align: middle;*/
+}
 .fim-dropdown>label {
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -43,6 +46,18 @@
   left: 3.5px;
   visibility: hidden
 }
+.fimd-dropdown>a:after {
+    content: "";
+    display: block;
+    width: 0;
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    border-bottom: 15px solid #c4c4c4;
+    position: absolute;
+    bottom: -15px;
+    left: 3.5px;
+    visibility: hidden
+}
 
 .fim-dropdown>input { display: none }
 
@@ -50,7 +65,13 @@
 
 .fim-dropdown.active>label:after { visibility: visible }
 
-.fim-dropdown>.inner {
+.fimd-dropdown>input { display: none }
+
+.fimd-dropdown.active>label { color: #202020 }
+
+.fimd-dropdown.active>label:after { visibility: visible }
+
+.fim-dropdown>.inner,.fimd-dropdown>.inner {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -69,7 +90,7 @@
 .inner{
     position: relative;
 }
-.fim-dropdown.active .inner { visibility: visible }
+.fim-dropdown.active .inner,.fimd-dropdown.active .inner  { visibility: visible }
 
 body {
   background: #e1e1e1;
