--- a/assets/templates/stcs_map_bg.html
+++ b/assets/templates/stcs_map_bg.html
@@ -335,17 +335,21 @@
                     <table style="margin: 5px 23px;">
                         <tbody>
                             <tr><td colspan="2" style="color: #fff; font-weight: 600; font-size: 11px;">Progress 80%</td></tr>
-                            <tr>
+                            <tr><%console.log(data.data[0].data);%>
+                                <%if((data.data[0].data["Pasar Seni"].roomside).length >0){%>
                                 <td>
-                                    <a class="lk-room" href="javascript:;" data-name="Sungai Buloh Station" data-value='{"SER":[60,80,50],"MO":[80,100,30],"SCR":[100,70,80]}'>
+                                    <a class="lk-room" href="javascript:;" data-name="Sungai Buloh Station" data-value='{<%=data.data[0].data["Pasar Seni"].roomside[0]%>,<%=data.data[0].data["Pasar Seni"].roomside[1]%>,<%=data.data[0].data["Pasar Seni"].roomside[2]%>}'>
                                         <img src="../assets/img/systems/stcs/room.png" alt="" style="width: 40px;"/>
                                     </a>
                                 </td>
+                                <%}%>
+                                <%if((data.data[0].data["Pasar Seni"].wayside).length >0){%>
                                 <td>
-                                    <a class="lk-wayside" href="javascript:;" data-name="Sungai Buloh Station" data-value='{"WNRA":[80,80,80],"RAP":[80,80,80],"AX":[80,80,80],"JB":[80,80,80],"ESP":[80,80,80],"NP":[80,80,80],"CABLE SB":[80,80,80],"CABLE NB":[80,80,80]}'>
+                                    <a class="lk-wayside" href="javascript:;" data-name="Sungai Buloh Station" data-value='{<%=data.data[0].data["Pasar Seni"].wayside[0]%>,<%=data.data[0].data["Pasar Seni"].wayside[1]%>,<%=data.data[0].data["Pasar Seni"].wayside[2]%>,<%=data.data[0].data["Pasar Seni"].wayside[3]%>,<%=data.data[0].data["Pasar Seni"].wayside[4]%>,<%=data.data[0].data["Pasar Seni"].wayside[5]%>,<%=data.data[0].data["Pasar Seni"].wayside[6]%>,<%=data.data[0].data["Pasar Seni"].wayside[7]%>}'>
                                         <img src="../assets/img/systems/stcs/wayside.png" alt="" style="width: 40px"/>
                                     </a>
                                 </td>
+                                <%}%>
                             </tr>
                         </tbody>
                     </table>
@@ -1040,22 +1044,17 @@
                         </tr>
                         </thead>
                         <tbody>
+                        <%if((data.data[1].data.R1).length >0) {%>
+                        <%_.each(data.data[1].data.R1, function(i) {%>
                         <tr>
-                            <td>STN 08</td>
-                            <td>88%</td>
-                            <td>85%</td>
-                            <td>90%</td>
-                            <td>92%</td>
-                            <td>85%</td>
+                            <td><%=i['station_no']%></td>
+                            <td><%=i['station_progress']%>%</td>
+                            <td><%=i['roomside_progress']%>%</td>
+                            <td><%=i['wayside_progress']%>%</td>
+                            <td><%=i['PAT_progress']%>%</td>
+                            <td><%=i['SAT_progress']%>%</td>
                         </tr>
-                        <tr>
-                            <td>STN 08</td>
-                            <td>88%</td>
-                            <td>85%</td>
-                            <td>90%</td>
-                            <td>92%</td>
-                            <td>85%</td>
-                        </tr>
+                        <% })} %>
                         </tbody>
                     </table>
                 </div>
@@ -1080,38 +1079,19 @@
                         </tr>
                         </thead>
                         <tbody>
+
+                        <%if((data.data[1].data.R2).length >0) {%>
+                        <%_.each(data.data[1].data.R2, function(i) {%>
                         <tr>
-                            <td>STN 08</td>
-                            <td>88%</td>
-                            <td>85%</td>
-                            <td>90%</td>
-                            <td>92%</td>
-                            <td>85%</td>
+                            <td><%=i['station_no']%></td>
+                            <td><%=i['station_progress']%>%</td>
+                            <td><%=i['roomside_progress']%>%</td>
+                            <td><%=i['wayside_progress']%>%</td>
+                            <td><%=i['PAT_progress']%>%</td>
+                            <td><%=i['SAT_progress']%>%</td>
                         </tr>
-                        <tr>
-                            <td>STN 08</td>
-                            <td>88%</td>
-                            <td>85%</td>
-                            <td>90%</td>
-                            <td>92%</td>
-                            <td>85%</td>
-                        </tr>
-                        <tr>
-                            <td>STN 08</td>
-                            <td>88%</td>
-                            <td>85%</td>
-                            <td>90%</td>
-                            <td>92%</td>
-                            <td>85%</td>
-                        </tr>
-                        <tr>
-                            <td>STN 08</td>
-                            <td>88%</td>
-                            <td>85%</td>
-                            <td>90%</td>
-                            <td>92%</td>
-                            <td>85%</td>
-                        </tr>
+                        <% })}%>
+
                         </tbody>
                     </table>
                 </div>
@@ -1136,46 +1116,19 @@
                         </tr>
                         </thead>
                         <tbody>
+
+                        <%if((data.data[1].data.R3).length >0) {%>
+                        <%_.each(data.data[1].data.R3, function(i) {%>
                         <tr>
-                            <td>STN 08</td>
-                            <td>88%</td>
-                            <td>85%</td>
-                            <td>90%</td>
-                            <td>92%</td>
-                            <td>85%</td>
+                            <td><%=i['station_no']%></td>
+                            <td><%=i['station_progress']%>%</td>
+                            <td><%=i['roomside_progress']%>%</td>
+                            <td><%=i['wayside_progress']%>%</td>
+                            <td><%=i['PAT_progress']%>%</td>
+                            <td><%=i['SAT_progress']%>%</td>
                         </tr>
-                        <tr>
-                            <td>STN 08</td>
-                            <td>88%</td>
-                            <td>85%</td>
-                            <td>90%</td>
-                            <td>92%</td>
-                            <td>85%</td>
-                        </tr>
-                        <tr>
-                            <td>STN 08</td>
-                            <td>88%</td>
-                            <td>85%</td>
-                            <td>90%</td>
-                            <td>92%</td>
-                            <td>85%</td>
-                        </tr>
-                        <tr>
-                            <td>STN 08</td>
-                            <td>88%</td>
-                            <td>85%</td>
-                            <td>90%</td>
-                            <td>92%</td>
-                            <td>85%</td>
-                        </tr>
-                        <tr>
-                            <td>STN 08</td>
-                            <td>88%</td>
-                            <td>85%</td>
-                            <td>90%</td>
-                            <td>92%</td>
-                            <td>85%</td>
-                        </tr>
+                        <% })}%>
+
                         </tbody>
                     </table>
                 </div>
@@ -1200,54 +1153,19 @@
                         </tr>
                         </thead>
                         <tbody>
+
+                        <%if((data.data[1].data.R4).length >0) {%>
+                        <%_.each(data.data[1].data.R4, function(i) {%>
                         <tr>
-                            <td>STN 08</td>
-                            <td>88%</td>
-                            <td>85%</td>
-                            <td>90%</td>
-                            <td>92%</td>
-                            <td>85%</td>
+                            <td><%=i['station_no']%></td>
+                            <td><%=i['station_progress']%>%</td>
+                            <td><%=i['roomside_progress']%>%</td>
+                            <td><%=i['wayside_progress']%>%</td>
+                            <td><%=i['PAT_progress']%>%</td>
+                            <td><%=i['SAT_progress']%>%</td>
                         </tr>
-                        <tr>
-                            <td>STN 08</td>
-                            <td>88%</td>
-                            <td>85%</td>
-                            <td>90%</td>
-                            <td>92%</td>
-                            <td>85%</td>
-                        </tr>
-                        <tr>
-                            <td>STN 08</td>
-                            <td>88%</td>
-                            <td>85%</td>
-                            <td>90%</td>
-                            <td>92%</td>
-                            <td>85%</td>
-                        </tr>
-                        <tr>
-                            <td>STN 08</td>
-                            <td>88%</td>
-                            <td>85%</td>
-                            <td>90%</td>
-                            <td>92%</td>
-                            <td>85%</td>
-                        </tr>
-                        <tr>
-                            <td>STN 08</td>
-                            <td>88%</td>
-                            <td>85%</td>
-                            <td>90%</td>
-                            <td>92%</td>
-                            <td>85%</td>
-                        </tr>
-                        <tr>
-                            <td>STN 08</td>
-                            <td>88%</td>
-                            <td>85%</td>
-                            <td>90%</td>
-                            <td>92%</td>
-                            <td>85%</td>
-                        </tr>
+                        <% })}%>
+
                         </tbody>
                     </table>
                 </div>
@@ -1272,38 +1190,19 @@
                         </tr>
                         </thead>
                         <tbody>
+
+                        <%if((data.data[1].data.R5).length >0) {%>
+                        <%_.each(data.data[1].data.R5, function(i) {%>
                         <tr>
-                            <td>STN 08</td>
-                            <td>88%</td>
-                            <td>85%</td>
-                            <td>90%</td>
-                            <td>92%</td>
-                            <td>85%</td>
+                            <td><%=i['station_no']%></td>
+                            <td><%=i['station_progress']%>%</td>
+                            <td><%=i['roomside_progress']%>%</td>
+                            <td><%=i['wayside_progress']%>%</td>
+                            <td><%=i['PAT_progress']%>%</td>
+                            <td><%=i['SAT_progress']%>%</td>
                         </tr>
-                        <tr>
-                            <td>STN 08</td>
-                            <td>88%</td>
-                            <td>85%</td>
-                            <td>90%</td>
-                            <td>92%</td>
-                            <td>85%</td>
-                        </tr>
-                        <tr>
-                            <td>STN 08</td>
-                            <td>88%</td>
-                            <td>85%</td>
-                            <td>90%</td>
-                            <td>92%</td>
-                            <td>85%</td>
-                        </tr>
-                        <tr>
-                            <td>STN 08</td>
-                            <td>88%</td>
-                            <td>85%</td>
-                            <td>90%</td>
-                            <td>92%</td>
-                            <td>85%</td>
-                        </tr>
+                        <% })}%>
+
                         </tbody>
                     </table>
                 </div>
@@ -1328,54 +1227,19 @@
                         </tr>
                         </thead>
                         <tbody>
+
+                        <%if((data.data[1].data.R6).length >0) {%>
+                        <%_.each(data.data[1].data.R6, function(i) {%>
                         <tr>
-                            <td>STN 08</td>
-                            <td>88%</td>
-                            <td>85%</td>
-                            <td>90%</td>
-                            <td>92%</td>
-                            <td>85%</td>
+                            <td><%=i['station_no']%></td>
+                            <td><%=i['station_progress']%>%</td>
+                            <td><%=i['roomside_progress']%>%</td>
+                            <td><%=i['wayside_progress']%>%</td>
+                            <td><%=i['PAT_progress']%>%</td>
+                            <td><%=i['SAT_progress']%>%</td>
                         </tr>
-                        <tr>
-                            <td>STN 08</td>
-                            <td>88%</td>
-                            <td>85%</td>
-                            <td>90%</td>
-                            <td>92%</td>
-                            <td>85%</td>
-                        </tr>
-                        <tr>
-                            <td>STN 08</td>
-                            <td>88%</td>
-                            <td>85%</td>
-                            <td>90%</td>
-                            <td>92%</td>
-                            <td>85%</td>
-                        </tr>
-                        <tr>
-                            <td>STN 08</td>
-                            <td>88%</td>
-                            <td>85%</td>
-                            <td>90%</td>
-                            <td>92%</td>
-                            <td>85%</td>
-                        </tr>
-                        <tr>
-                            <td>STN 08</td>
-                            <td>88%</td>
-                            <td>85%</td>
-                            <td>90%</td>
-                            <td>92%</td>
-                            <td>85%</td>
-                        </tr>
-                        <tr>
-                            <td>STN 08</td>
-                            <td>88%</td>
-                            <td>85%</td>
-                            <td>90%</td>
-                            <td>92%</td>
-                            <td>85%</td>
-                        </tr>
+                        <% })}%>
+
                         </tbody>
                     </table>
                 </div>
@@ -1400,46 +1264,19 @@
                         </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>STN 08</td>
-                                <td>88%</td>
-                                <td>85%</td>
-                                <td>90%</td>
-                                <td>92%</td>
-                                <td>85%</td>
-                            </tr>
-                            <tr>
-                                <td>STN 08</td>
-                                <td>88%</td>
-                                <td>85%</td>
-                                <td>90%</td>
-                                <td>92%</td>
-                                <td>85%</td>
-                            </tr>
-                            <tr>
-                                <td>STN 08</td>
-                                <td>88%</td>
-                                <td>85%</td>
-                                <td>90%</td>
-                                <td>92%</td>
-                                <td>85%</td>
-                            </tr>
-                            <tr>
-                                <td>STN 08</td>
-                                <td>88%</td>
-                                <td>85%</td>
-                                <td>90%</td>
-                                <td>92%</td>
-                                <td>85%</td>
-                            </tr>
-                            <tr>
-                                <td>STN 08</td>
-                                <td>88%</td>
-                                <td>85%</td>
-                                <td>90%</td>
-                                <td>92%</td>
-                                <td>85%</td>
-                            </tr>
+
+                        <%if((data.data[1].data.R7).length >0) {%>
+                        <%_.each(data.data[1].data.R7, function(i) {%>
+                        <tr>
+                            <td><%=i['station_no']%></td>
+                            <td><%=i['station_progress']%>%</td>
+                            <td><%=i['roomside_progress']%>%</td>
+                            <td><%=i['wayside_progress']%>%</td>
+                            <td><%=i['PAT_progress']%>%</td>
+                            <td><%=i['SAT_progress']%>%</td>
+                        </tr>
+                        <% })}%>
+
                         </tbody>
                     </table>
                 </div>
@@ -1484,20 +1321,15 @@
                             <th style="text-align: center; color: rgb(255, 175, 120);">STATION</th>
                             <th style="text-align: center; color: rgb(0, 158, 140);">ISSUES</th>
                         </tr>
-                            </thead>
+                            </thead><%console.log(data.data[0].data);%>
                                 <tbody id="status_container">
+                                <%if((data.data[2].data.comment).length >0){%>
+                                <%_.each(data.data[2].data.comment, function(i) {%>
                                                      <tr>
-                                                         <td>STN 20</td>
-                                                         <td>Civil work delayes with rooms anot handed over</td>
+                                                         <td><%=i['station_code']%></td>
+                                                         <td><%=i['comment']%></td>
                                                      </tr>
-                                                     <tr>
-                                                         <td>STN 21</td>
-                                                         <td>All Emergency stop Plungers-mockup rejected</td>
-                                                     </tr>
-                                                     <tr>
-                                                         <td>STN 06</td>
-                                                         <td>Late Civil Handover</td>
-                                                     </tr>
+                                <%})}%>
                                 </tbody>
                     </table>
                 </div>
